--- a/src/View/Admin/Dish/index.html.twig
+++ b/src/View/Admin/Dish/index.html.twig
@@ -24,9 +24,9 @@
 						<td>{{ dish.category_name }}</td>
 						<td>{{ dish.price }}€</td>
 						<td>
-							<a class="btn btn-sm btn-secondary" href="/adminDish/edit/{{ dish.id }}">Editer</a>
-							<form method="POST" onSubmit="return confirm('Voulez vous supprimer ?');" action="/adminDish/delete/{{ dish.id }}">
-								<button class="mt-1 btn btn-sm btn-danger">Supprimer</button>
+							<a class="btn btn-sm btn-secondary col-5" href="/adminDish/edit/{{ dish.id }}">Editer</a>
+							<form class="col-5 mt-1" method="POST" onSubmit="return confirm('Voulez vous supprimer ?');" action="/adminDish/delete/{{ dish.id }}">
+								<button class="btn btn-sm btn-danger col-12">Supprimer</button>
 							</form>
 						</td>
 					</tr>
